# llm-d-e2e

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
configs/profiles/: all.yaml  cache-aware.yaml  deepseek.yaml  flow-control.yaml  pd-performance.yaml  pd.yaml  smoke.yaml
configs/testcases/: cache-aware.yaml  flow-control-tokens.yaml  flow-control.yaml  moe.yaml  multi-pool.yaml  pd-cache-aware.yaml  pd-performance.yaml  pd.yaml  single-gpu-no-scheduler.yaml  single-gpu-smoke.yaml  single-gpu.yaml
docs/: Jenkinsfile.mock  adding-a-test-case.md  xks-conformance-plan.md
reports/metrics/: epp-cache-aware-kserve-router-scheduler-5df5f746c9-66prf.prom  epp-cache-aware-kserve-router-scheduler-5df5f746c9-qbt6h.prom  epp-cache-aware-kserve-router-scheduler-6885b846d5-sjrsm.prom  epp-cache-aware-kserve-router-scheduler-6885b846d5-xw662.prom  epp-cache-aware-kserve-router-scheduler-76fc6d8897-9nn22.prom  epp-flow-control-kserve-router-scheduler-54b596df8d-77pl5.prom  epp-flow-control-kserve-router-scheduler-54b596df8d-7z44k.prom  epp-flow-control-kserve-router-scheduler-54b596df8d-frpvw.prom  epp-flow-control-kserve-router-scheduler-7b599f7fbd-462g7.prom  epp-flow-control-tokens-kserve-router-scheduler-dbd7d44b7-bgglv.prom  epp-flow-control-tokens-kserve-router-scheduler-dbd7d44b7-d854k.prom  epp-flow-control-tokens-kserve-router-scheduler-dbd7d44b7-gmfww.prom  epp-flow-control-tokens-kserve-router-scheduler-dbd7d44b7-hm5cp.prom  (+4 more)
scripts/: new-testcase.sh
tests/: conftest.py  test_conformance.py  test_smoke.py
(+9 files in other folders)
